Correción de errores. FINAL.